// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cjsModuleRunnerTransform > basic 1`] = `
"//#region rolldown:runtime
var __create = Object.create;
var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __commonJS = (cb, mod) => function() {
	return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;
};
var __copyProps = (to, from, except, desc) => {
	if (from && typeof from === "object" || typeof from === "function") for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {
		key = keys[i];
		if (!__hasOwnProp.call(to, key) && key !== except) __defProp(to, key, {
			get: ((k) => from[k]).bind(null, key),
			enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
		});
	}
	return to;
};
var __toESM = (mod, isNodeMode, target) => (target = mod != null ? __create(__getProtoOf(mod)) : {}, __copyProps(isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", {
	value: mod,
	enumerable: true
}) : target, mod));

//#endregion
//#region \\0virtual:entry-inner
var require___virtual_entry_inner = /* @__PURE__ */ __commonJS({ "\\\\0virtual:entry-inner": ((exports) => {
	exports.ok = true;
}) });

//#endregion
//#region \\0virtual:entry
var import___virtual_entry_inner = /* @__PURE__ */ __toESM(require___virtual_entry_inner());
__vite_ssr_exportAll__(import___virtual_entry_inner.default);

//#endregion"
`;

exports[`cjsModuleRunnerTransform > basic 3`] = `
"import m from "./cjs/use-sync-external-store.development.js";

//#region rolldown:runtime
var __create = Object.create;
var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __commonJS = (cb, mod) => function() {
	return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;
};
var __copyProps = (to, from, except, desc) => {
	if (from && typeof from === "object" || typeof from === "function") for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {
		key = keys[i];
		if (!__hasOwnProp.call(to, key) && key !== except) __defProp(to, key, {
			get: ((k) => from[k]).bind(null, key),
			enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
		});
	}
	return to;
};
var __toESM = (mod, isNodeMode, target) => (target = mod != null ? __create(__getProtoOf(mod)) : {}, __copyProps(isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", {
	value: mod,
	enumerable: true
}) : target, mod));

//#endregion
//#region \\0virtual:require-to-import/./cjs/use-sync-external-store.development.js
var require_use_sync_external_store_development = /* @__PURE__ */ __commonJS({ "\\\\0virtual:require-to-import/./cjs/use-sync-external-store.development.js": ((exports, module) => {
	module.exports = m;
}) });

//#endregion
//#region \\0virtual:entry-inner
var require___virtual_entry_inner = /* @__PURE__ */ __commonJS({ "\\\\0virtual:entry-inner": ((exports, module) => {
	module.exports = require_use_sync_external_store_development();
}) });

//#endregion
//#region \\0virtual:entry
var import___virtual_entry_inner = /* @__PURE__ */ __toESM(require___virtual_entry_inner());
__vite_ssr_exportAll__(import___virtual_entry_inner.default);

//#endregion"
`;
